securitygroup.tf
resource "aws_security_group" "nginx-sg" {
  name        = "nginx-sg"
  description = "security group for nginx ssh"
  vpc_id      = aws_vpc.nginx.id

  ingress {
    description = "inbound rules"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    ## ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    description = "inbound rules"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    ## ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    description = "inbound rules"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    ## ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    ## ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "nginx-sg"
  }
}
